--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 9001
+
 logging:
   level:
     org:
@@ -11,8 +14,8 @@ opensearch:
   url: https://localhost:9200
 
   authentication:
-    certificate: localhost-18082.crt
-    key: localhost-18082.key
+    certificate: localhost-8443.crt
+    key: localhost-8443.key
     keypassword: 
     user: admin
     password: admin
